--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,8 +13,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
+      - run: echo ::set-output name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
+        id: release_version
       - run: make release
+        env:
+          RELEASE_VERSION: ${{ steps.release_version.outputs.RELEASE_VERSION }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
