--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,6 +30,7 @@ jobs:
           prerelease: false
       - uses: docker/login-action@v1
         with:
+          registry: registry.replicated.com
           username: ${{ secrets.REPLICATED_REGISTRY_SECRET }}
           password: ${{ secrets.REPLICATED_REGISTRY_SECRET }}
       - name: Push to Replicated
